turtleart.house.House.scala.error
Compilation error:
House:22: error: ':' expected but ')' found.
def move(distance) {
                 ^House:28: error: identifier expected but '}' found.
}
^