turtleart.house.House.scala.code
override def run() {
  drawSquart(100);
  move(100);
  left(30);
  drawEqTriangle(100);
}

def drawSquare(size:Double) {
  for (i <- 1 to 4) {
    forward(size);
    left(90);
  }
}

def drawEqTriangle(size:Double) {
  for (i <- 1 to 3) {
    forward(size);
    left(180-60);
  }
}

def move(distance) {
  penUp();
  forward(distance)
  penDown();
}